# numanalytica

./: .gitignore  ARCHITECTURE.py  BUILD_SUMMARY.md  HISTORY.md  LICENSE  README.md  THESIS_ACTION_PLAN.txt  demo.py  pyproject.toml  requirements.txt  setup.py  test_fixes.py
.tmp.driveupload/: 1003  1007  1011  1015  1019  1023  1027  1031  1039  1041  1045  1049  1053  1057  1061  1065  1069  1073  1075  1079  1083  1087  1091  1095  1099  1103  1107  1109  1113  1117  1119  1123  1127  1131  1135  1139  1143  1147  1151  1155  (+15 more)
src/numanalytica/: __init__.py
src/numanalytica/benchmarks/: __init__.py
src/numanalytica/core/: __init__.py  base_solver.py  exceptions.py  logger.py  results.py
src/numanalytica/differentiation/: __init__.py  complex_step.py  finite_diff.py  jacobian.py
src/numanalytica/ode/: __init__.py  base_integrator.py
src/numanalytica/ode/explicit/: __init__.py  euler.py
src/numanalytica/ode/implicit/: __init__.py  backward_euler.py
src/numanalytica/roots/: __init__.py  bisection.py  false_position.py  fixed_point.py  muller.py  newton_raphson.py  secant.py  utils.py
src/numanalytica/stability/: __init__.py  dahlquist.py  region_plotter.py
src/numanalytica/visualization/: __init__.py  convergence_plot.py
