[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "numanalytica"
version = "0.2.0"
description = "A pedagogical ('glass-box') numerical analysis library implementing Backward Differentiation Formulas for stiff ODEs with comprehensive stability analysis."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Kola-Ilugbo Ayomikun", email = "amiks262@gmail.com" },
]
keywords = [
    "numerical analysis",
    "ODE solver",
    "root finding",
    "backward differentiation formulas",
    "stiff equations",
    "complex step differentiation",
    "A-stability",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Mathematics",
]

dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.2.4",
    "pytest-cov>=2.12.0",
    "black>=21.5b0",
    "ruff>=0.1.0",
    "mypy>=0.900",
    "sphinx>=4.0",
]
science = [
    "sympy>=1.9",
    "pandas>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/amiks262/numanalytica"
Repository = "https://github.com/amiks262/numanalytica"
Documentation = "https://numanalytica.readthedocs.io"
Issues = "https://github.com/amiks262/numanalytica/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.mypy]
python_version = "3.8"
disallow_untyped_defs = false
ignore_missing_imports = true
